--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,10 +42,10 @@
 			</a>
 
 			<div class="trigger">
-				{% for my_page in site.pages %}
-				{% if my_page.title %}
-				<a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
-				{% endif %}
+				{% for page in site.pages %}
+					{% if page.title %}
+					<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+					{% endif %}
 				{% endfor %}
 			</div>
 		</nav>
