--- a/_layouts/academics.html
+++ b/_layouts/academics.html
@@ -2,19 +2,26 @@
 <html>
 	<head>
 		{% include head.html %}
+		<link rel="stylesheet" href="stylesheets/academics.css">
+		<script>
+			$(document).ready(function () {
+				$("video").hover(function () {
+					this.play();
+				}, function () {
+					this.pause();
+				});
+			})
+		</script>
 	</head>
+
 	<body>
-
 		{% include header.html %}
-
 		<div class="page-content">
 			<div class="wrapper">
 				{{ content }}
 			</div>
 		</div>
-
 		{% include footer.html %}
-
 	</body>
 
 </html>
