--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,10 +54,11 @@
 						</li>
 
 						{% for page in site.pages %}
-							{% if page.title %}
-							<li class="bannerItem"><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-							</li>
-							{% endif %}
+						{% if page.title and page.title != Index %}
+						<li class="bannerItem">
+							<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+						</li>
+						{% endif %}
 						{% endfor %}
 					</ul>
 				</div>
