--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,13 +24,11 @@
 		<div class="header">
 			<table width="100%">
 				<tr>
-					<td style = "width: 10%; height : 100%"><div id="profile" style="width: 100%;height: 100%"></div></td>
-					<td style = "width: 40%; height : 100%"><h4 style = "margin-left: 5%">Jamie Cho's Web Page!</h4></td>
-					<!--<td width="50%" style="background-color: darkturquoise"></td>-->
+					<td style = "width: 10%; height : 100%"><a href="{{ site.baseurl }}/"><div id="profile" style="width: 100%;height: 100%"></div></a></td>
+					<td style = "width: 40%; height : 100%"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></td>
 				</tr>
 			</table>
 		</div>
-		<a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
 		<nav class="site-nav">
 			<a href="#" class="menu-icon">
