--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -112,16 +112,16 @@ pre {
  * Wrapper
  */
 .wrapper {
-  max-width: -webkit-calc(800px - (30px * 2));
-  max-width: calc(800px - (30px * 2));
+  max-width: -webkit-calc(1024px - (30px * 2));
+  max-width: calc(1024px - (30px * 2));
   margin-right: auto;
   margin-left: auto;
   padding-right: 30px;
   padding-left: 30px; }
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 1024px) {
     .wrapper {
-      max-width: -webkit-calc(800px - (30px));
-      max-width: calc(800px - (30px));
+      max-width: -webkit-calc(1024px - (30px));
+      max-width: calc(1024px - (30px));
       padding-right: 15px;
       padding-left: 15px; } }
 
@@ -164,8 +164,8 @@ pre {
     color: #424242; }
 
 .site-nav {
-  float: right;
-  line-height: 56px; }
+  float: left;
+  line-height: 25px; }
   .site-nav .menu-icon {
     display: none; }
   .site-nav .page-link {
@@ -246,7 +246,7 @@ pre {
   width: -webkit-calc(45% - (30px / 2));
   width: calc(45% - (30px / 2)); }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1024px) {
   .footer-col-1,
   .footer-col-2 {
     width: -webkit-calc(50% - (30px / 2));
@@ -293,7 +293,7 @@ pre {
   font-size: 42px;
   letter-spacing: -1px;
   line-height: 1; }
-  @media screen and (max-width: 800px) {
+  @media screen and (max-width: 1024px) {
     .post-title {
       font-size: 36px; } }
 
@@ -301,17 +301,17 @@ pre {
   margin-bottom: 30px; }
   .post-content h2 {
     font-size: 32px; }
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 1024px) {
       .post-content h2 {
         font-size: 28px; } }
   .post-content h3 {
     font-size: 26px; }
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 1024px) {
       .post-content h3 {
         font-size: 22px; } }
   .post-content h4 {
     font-size: 20px; }
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 1024px) {
       .post-content h4 {
         font-size: 18px; } }
 
@@ -465,7 +465,7 @@ body{
 }
 div.header{
     height : 10%;
-    width: 80%;
+    width: 100%;
     background-color: black;
     border-width: 20px;
     border-style: double;
@@ -523,10 +523,10 @@ li.bannerItem::after{
     background-color: snow;
 }
 div.wrapper{
-    display:table;
+    display: block;
     width : 100%;
     height : 80%;
-    margin : 2%
+    margin : auto;
 }
 div.container{
     display : table-row;
