added github projects

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,9 @@
 						<li class="bannerItem">
 							<a class="page-link" href="index.html">Index</a>
 						</li>
-
+						<li class="bannerItem">
+							<a class="page-link" href="gitprojects.html">Index</a>
+						</li>
 						{% for page in site.pages %}
 						{% if page.title and page.title != 'Index' %}
 						<li class="bannerItem">
