--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,12 +45,9 @@
 						<li class="bannerItem">
 							<a class="page-link" href="index.html">Index</a>
 						</li>
-						<li class="bannerItem">
-							<a class="page-link" href="github.html">Index</a>
-						</li>
 						{% for page in site.pages %}
 							{% if page.title%}
-								{% if page.title != Index %}
+								{% if page.title != "Index" %}
 									<li class="bannerItem">
 										<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
 									</li>
