--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -3,6 +3,7 @@
 	<head>
 		{% include head.html %}
 		<link rel="stylesheet" href="stylesheets/projects.css">
+		<link rel="stylesheet" href="stylesheets/slideshow.css">
 	</head>
 	<body>
 
