--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,9 +6,11 @@
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
 <link rel="stylesheet" href="stylesheets/styles.css">
+<link rel="stylesheet" href="stylesheets/navigation.css">
 
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 <script src="javascripts/jquery-1.11.3.js"></script> <!-- for development -->
 <script src="javascripts/three.min.js"></script>
@@ -16,6 +18,23 @@
 <script src="javascripts/animateCube.js"></script>
 
 <script type="text/javascript">
+
+var slideIndex = 0;
+var maxSlides;
+
+function posMod(a,b){
+	return ((a%b)+b)%b
+}
+function showSlide(n){
+	slideIndex = posMod(n,maxSlides);
+	n = slideIndex;
+	console.log(slideIndex);
+	$(".mySlide").css({display:"none"});
+	$(".dot").removeClass("active");
+	$(".mySlide").eq(n).css({display:"block"});
+	$(".dot").eq(n).addClass("active");
+}
+
 $(document).ready(function(){
 	$("#open-sidenav").click(function(){
 		$("#sidenav").width(250);
@@ -25,14 +44,13 @@ $(document).ready(function(){
 		$("#sidenav").width(0);
 	})
 
-	$(".dropdown").hide();
-	$(".bannerItem").hover(function(){
-		$(this).children(".dropdown").slideDown();
-	},function(){
-		$(this).children(".dropdown").slideUp();
-	});
+	maxSlides = $(".mySlide").length;
+
+	showSlide(slideIndex);
+
 	initContext(); //for animating cube
 	animate();
 	})
+
 </script>
 
