--- a/stylesheets/navigation.css
+++ b/stylesheets/navigation.css
@@ -10,13 +10,14 @@
 	overflow-x: hidden;
 	transition: 0.5s;
 	padding-top: 60px;
+    box-shadow: 0px 1px 50px aquamarine;
 }
 
 #sidenav a {
 	padding: 8px 8px 8px 32px;
 	text-decoration: none;
 	font-size: 25px;
-	color: #818181;
+	color: aquamarine;
 	display: block;
 	transition: 0.3s
 }
@@ -41,7 +42,7 @@
 	padding-left: 15px;
 	font-size: 30px;
 	background-color: #111;
-	color: #818181;
+	color: aquamarine;
 	display: block;
 	cursor: pointer;
 	padding-right: 30px;
