--- a/stylesheets/projects.css
+++ b/stylesheets/projects.css
@@ -5,10 +5,9 @@ div.Project {
     height: 500px;
     margin: auto;
     padding: 5%;
-    border: 15px outset;
-    background-color: #ccc7e4;
+    border: none;
+    background-color: aliceblue;
     font-family: monospace;
-    border-color: darkblue;
     border-radius: 50px;
 }
 
@@ -18,6 +17,12 @@ div.Project {
 .Project a:hover{
 	color: cornflowerblue;
 }
+
+.Project iframe{
+	width: 100%;
+	height: 100%;
+}
+
 .Project h2 {
 	text-align: center;
 	font-family: monospace;
