pointing to new academics page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
 		<div id="sidenav">
 			<a href="javascript:void(0)" id="close-sidenav" onclick="closeNav()">×</a>
 			<a class="page-link" href="index.html">Index</a>
+			<a class="page-link" href="Academics">Academics</a>
 			{% for page in site.pages %}
 				{% if page.title%}
 					{% if page.title != "Index" %}
