--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,42 @@
+<script type="text/javascript">
+    var slideIndex = 0;
+    var maxSlides = 1;
+
+    function showSlide(n){
+        slideIndex = posMod(n,maxSlides);
+        n = slideIndex;
+        $(".mySlide").css({display:"none"});
+        $(".dot").removeClass("active");
+        $(".mySlide").eq(n).css({display:"block"});
+        $(".dot").eq(n).addClass("active");
+    }
+
+    $(document).ready(function(){
+        $("#open-sidenav").click(function(){
+            $("#sidenav").width(250);
+        });
+
+        $("#close-sidenav").click(function(){
+            $("#sidenav").width(0);
+        });
+
+        maxSlides = $(".mySlide").length;
+
+        showSlide(slideIndex);
+
+        initContext(); //for animating cube
+        animate();
+    });
+</script>
+
 <span id='open-sidenav'>☰ Navigate</span>
+
 <header class="site-header">
 	<div class="wrapper">
 		<div class="header">
 			<table width="100%">
 				<tr>
-					<td style = "width: 10%; height : 100%"><a href="{{ site.baseurl }}/"><div id="profile" style="width: 100%;height: 100%"></div></a></td>
+					<td style = "width: 10%; height : 100%"><a href="{{ site.baseurl }}/" style="width:100%;height:100%;"><div id="profile" style="width: 100%;height: 100%"></div></a></td>
 					<td style = "width: 40%; height : 100%"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a></td>
 				</tr>
 			</table>
