--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,9 +14,10 @@
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 <script src="javascripts/jquery-1.11.3.js"></script> <!-- for development -->
 <script src="javascripts/three.min.js"></script>
-<script src="javascripts/cannon.min.js"></script>
 <script src="javascripts/STLLoader.js"></script>
 <script src="javascripts/BufferSubdivisionModifier.js"></script>
+<script src="javascripts/OrbitControls.js"></script>
+<script src="javascripts/cannon.min.js"></script>
 <script src="javascripts/animateCube.js"></script>
 <script src="javascripts/animateDice.js"></script>
 <script src="javascripts/svg.min.js"></script>
