--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="stylesheets/styles.css">
 <link rel="stylesheet" href="stylesheets/navigation.css">
 <link rel="stylesheet" href="stylesheets/fontawesome-all.min.css">
+<link rel="stylesheet" href="stylesheets/topnav.css">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
