--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -4,13 +4,13 @@
 		{% include head.html %}
 	</head>
 	<body>
-		{% include header.liquid %}
-		<div class="page-content">
+		{{ content }}
+		<!--<div class="page-content">
 			<div class="wrapper">
 				{{ content }}
 			</div>
 		</div>
-
+		-->
 		{% include footer.html %}
 
 	</body>
