--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -172,7 +172,7 @@ pre > code {
  */
 
 .site-header {
-    border-top: 5px solid #424242;
+    /*border-top: 5px solid #424242;*/
     border-bottom: 1px solid #e8e8e8;
     min-height: 56px;
     position: relative;
