--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 
-		{% include header.html %}
+		{% include header.liquid %}
 
 		<div class="page-content">
 			<div class="wrapper">
