refactoring personal, adding webfonts

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -72,7 +72,7 @@
         <a class="nav-active" href="index"><i class="fa fa-home" aria-hidden="true"></i></a>
         <a href="intro">Intro</a>
         <a href="projects">Projects</a>
-        <a href="academics">Academics</a>
+        <a href="Academics">Academics</a>
         <a href="personal">Personal</a>
         <a href="research">Research</a>
     </div>
