--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,11 @@
 
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-
+<style>
+    @font-face {
+        font-family: 'catamaran';
+    }
+</style>
 <link rel="stylesheet" href="stylesheets/styles.css">
 <link rel="stylesheet" href="stylesheets/navigation.css">
 <link rel="stylesheet" href="stylesheets/fontawesome-all.min.css">
@@ -14,6 +18,7 @@
 
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
 <script src="javascripts/jquery-1.11.3.js"></script> <!-- for development -->
+
 <script src="javascripts/three.min.js"></script>
 <script src="javascripts/STLLoader.js"></script>
 <script src="javascripts/BufferSubdivisionModifier.js"></script>
@@ -22,4 +27,14 @@
 <script src="javascripts/animateCube.js"></script>
 <script src="javascripts/animateDice.js"></script>
 <script src="javascripts/svg.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+<script>
+    WebFont.load({
+        google: {
+            families: ['Catamaran', 'Anton']
+        }
+    });
+</script>
+
 <script src="javascripts/utils.js"></script>
