--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,19 +17,20 @@
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> -->
-<script src="javascripts/jquery-1.11.3.js"></script> <!-- for development -->
+<script src="js/jquery-1.11.3.js"></script> <!-- for development -->
 
 <!-- THREE.JS & Related -->
-<script src="javascripts/three.min.js"></script>
-<script src="javascripts/STLLoader.js"></script>
-<script src="javascripts/ColladaLoader.js"></script>
-<script src="javascripts/BufferSubdivisionModifier.js"></script>
-<script src="javascripts/OrbitControls.js"></script>
+<script src="js/three.min.js"></script>
+<script src="js/STLLoader.js"></script>
+<script src="js/ColladaLoader.js"></script>
+<script src="js/BufferSubdivisionModifier.js"></script>
+<script src="js/OrbitControls.js"></script>
+<script src="js/animationBase.js"></script>
 
-<script src="javascripts/cannon.min.js"></script>
-<script src="javascripts/animateCube.js"></script>
-<script src="javascripts/animateDice.js"></script>
-<script src="javascripts/svg.min.js"></script>
+<script src="js/cannon.min.js"></script>
+<script src="js/animateCube.js"></script>
+<script src="js/animateDice.js"></script>
+<script src="js/svg.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 
 <script>
@@ -42,4 +43,4 @@
     }
 </script>
 
-<script src="javascripts/utils.js"></script>
+<script src="js/utils.js"></script>
