start revamping website

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -75,6 +75,7 @@
         <a href="Academics">Academics</a>
         <a href="personal">Personal</a>
         <a href="research">Research</a>
+		<a href="objects/resume.pdf">Resume</a>
     </div>
 
     <div class="search-container" style="position:relative;">
