--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="stylesheets/styles.css">
 <link rel="stylesheet" href="stylesheets/navigation.css">
 <link rel="stylesheet" href="stylesheets/fontawesome-all.min.css">
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 <link rel="stylesheet" href="stylesheets/topnav.css">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
@@ -28,6 +29,7 @@
 <script src="js/animationBase.js"></script>
 
 <script src="js/cannon.min.js"></script>
+<!--<script src="js/cannon.js"></script>-->
 <script src="js/animateCube.js"></script>
 <script src="js/animateDice.js"></script>
 <script src="js/svg.min.js"></script>
