add linkedin to intro + update description

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,17 @@
             <div class="footer-col footer-col-2">
                 <ul class="social-media-list">
                     <li>
-                        {% include icon-github.html username=site.github_username %}
+                        <a href="https://github.com/{{ include.username }}">
+                            <i class="fab fa-github"></i>
+                            <span class="username">{{ site.github_username }}</span>
+                        </a>
+
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/yycho0108/">
+                            <i class="fab fa-linkedin"></i>
+                            <span class="username">yycho0108</span>
+                        </a>
                     </li>
                 </ul>
             </div>
